<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
    
	<ScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">


	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:orientation="vertical">
	
		<TextView
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	     	android:text="@string/page_trombi" /> 
	
	    	<LinearLayout 
	            android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal">
	
	    		<TextView
	    		    android:layout_width="wrap_content"
	    		    android:layout_height="wrap_content"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"
	           		android:gravity="center" 		  
	    		    android:text="@string/trombi_nom" />
	
	    		<Spinner android:id="@+id/option_nom"
					android:layout_width="120dp"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center"
	                android:entries="@array/option">               
	            </Spinner>      
	    		
	    		<EditText
	    		    android:id="@+id/nom"
	    		    android:layout_width="120dp"
	    		    android:layout_height="wrap_content"
	    		    android:inputType="text"
	    		    android:ems="10"
	    		    android:maxLines="1"
	    		    android:singleLine="true" />
	            
	        </LinearLayout>
	        
	    	<LinearLayout
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:orientation="horizontal">
	            
	            <TextView
	    			android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"	
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"							
			     	android:text="@string/trombi_prenom" />
	
	            <Spinner android:id="@+id/option_prenom"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center"
	                android:entries="@array/option">               
	            </Spinner>      
	            
	            <EditText
	                android:id="@+id/prenom"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content"
	                android:inputType="text"
	                android:ems="10"
	                android:maxLines="1"
	                android:singleLine="true" />
	            
	        </LinearLayout>
	            
	    	<LinearLayout 
	            android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal">
	   			
	            <TextView
	    			android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"				
	     			android:text="@string/trombi_pseudo" />
	            
	            <Spinner android:id="@+id/option_pseudo"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center"
	                android:entries="@array/option">               
	            </Spinner>
	            
	            <EditText
	                android:id="@+id/pseudo"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content"
	                android:inputType="text"
	                android:maxLines="1"
	                android:singleLine="true" />
	
	        </LinearLayout>
	            
	       	<LinearLayout 
	            android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal">
	   			
	            <TextView
	    			android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"				
	     			android:text="@string/trombi_tel" />
	            
	            <Spinner android:id="@+id/option_tel"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center"
	                android:entries="@array/option_tel">               
	            </Spinner>      
	
	            <EditText
	                android:id="@+id/tel"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="phone"
	                android:maxLines="1"
	                android:singleLine="true" >
	            </EditText>
	        
	        </LinearLayout>
	            
	        <LinearLayout 
	                android:layout_width="match_parent"
	    			android:layout_height="wrap_content"
	    			android:orientation="horizontal">
	    			
	            <TextView
					android:layout_width="wrap_content"
					android:layout_gravity="center"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"							
					android:layout_height="wrap_content"
	     			android:text="@string/sexe" />
	    			
	 		    <CheckBox android:id="@+id/sexe_m"
					android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		       		android:text="@string/masculin"
		        	android:checked="true"/>
	            
	            <CheckBox android:id="@+id/sexe_f"
					android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		       		android:text="@string/feminin"
		        	android:checked="true"/>      
		        		         
	        </LinearLayout>
	            
	        <LinearLayout 
	                android:layout_width="match_parent"
	    			android:layout_height="wrap_content"
	    			android:orientation="horizontal">
	            	
	            <TextView
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"
					android:layout_width="wrap_content"
	     			android:text="@string/promo" />
	            
	            <Spinner android:id="@+id/promo"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:entries="@array/promo">               
	            </Spinner>
	        
	        </LinearLayout>
	
	        <LinearLayout 
	                android:layout_width="match_parent"
	    			android:layout_height="wrap_content"
	    			android:orientation="horizontal">
	    			
	            <TextView
					android:layout_width="wrap_content"
					android:layout_gravity="center"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"							
					android:layout_height="wrap_content"
	     			android:text="@string/antenne" />
	    			
	 		    <CheckBox android:id="@+id/antenne_evry"
					android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		       		android:text="@string/antenne_evry"
		        	android:checked="true"/>
	            
	            <CheckBox android:id="@+id/antenne_stras"
					android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		       		android:text="@string/antenne_stras"
		        	android:checked="true"/>      
		        		         
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal">
	   			
	            <TextView
	    			android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"
	           		android:layout_gravity="center"				
	     			android:text="@string/groupe" />
	            
	            <Spinner android:id="@+id/option_groupe"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center"
	                android:entries="@array/option_groupe">               
	            </Spinner>	
	        
	        </LinearLayout>
	        	  
	       	<LinearLayout 
	            android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal">
	   			
	            <TextView
	    			android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"	
	           		android:layout_gravity="center"			
	     			android:text="@string/logement" />
	            
	            <Spinner android:id="@+id/option_logement"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center"
	                android:entries="@array/option_logement">               
	            </Spinner>	
	        
	        </LinearLayout>	        

	       	<LinearLayout 
	            android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal">
	   			
	            <TextView
	    			android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
	           		android:paddingRight="8dp"	
	           		android:layout_gravity="center"			
	     			android:text="@string/clubs" />
	            
	            <Spinner android:id="@+id/option_club_ancienBdE"
	                android:layout_width="120dp"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="center"
	                android:entries="@array/option_logement">               
	            </Spinner>	
	        
	        </LinearLayout>	 
	        
      
		</LinearLayout>
	
	</ScrollView>

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"
	    android:layout_gravity="center">
    	
	    <Button android:id="@+id/Rechercher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/txt_button2" />
	    
	</LinearLayout>

</LinearLayout>