<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bckgrd_motif"
    tools:context="com.iiens.net.Login" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bckgrd"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:indeterminateDrawable="@drawable/progress" />

            <TextView
                android:id="@+id/login_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/anim_connexion"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/login_bckgrd" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="260dp"
            android:layout_gravity="center"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_top"
                android:hint="@string/txt_username"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bottom"
                android:hint="@string/txt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/remember_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_connect"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/connexion_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/txt_button" />
        </LinearLayout>
    </ScrollView>

</merge>